<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_book"
        android:name="com.example.iceandfire.presentation.book.BookFragment"
        android:icon="@drawable/ic_book_nav"
        android:title="@string/title_book" />

    <item
        android:id="@+id/navigation_dashboard"
        android:name="com.example.iceandfire.presentation.dashboard.DashboardFragment"
        android:icon="@drawable/ic_character_nav"
        android:title="@string/title_character" />

    <item
        android:id="@+id/navigation_notifications"
        android:name="com.example.iceandfire.presentation.notifications.NotificationsFragment"
        android:icon="@drawable/ic_house_nav"
        android:title="@string/title_house" />

</menu>